# nesthing

./: .gitignore  6502.txt  CMakeLists.txt  ark.asm  disasm.py  imgui.ini  nesthing.brk  opcodes.txt  parse2.py  parse_codes.py  t2.html  timing.txt
_win32/: nesthing.sln  nesthing.vcxproj  nesthing.vcxproj.filters
nesthing.xcodeproj/: project.pbxproj
nesthing/nesthing/: main.cpp  nes_helpers.cpp  nes_helpers.h  nesthing.hpp  opcodes.hpp
nesthing/nesthing.xcodeproj/: project.pbxproj
src/: cpu.cpp  cpu.hpp  file_utils.cpp  file_utils.hpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  main.cpp  mmc1.cpp  mmc1.hpp  nes.cpp  nes.hpp  nes_helpers.cpp  nes_helpers.h  nes_helpers.hpp  nesthing.hpp  opcodes.hpp  ppu.cpp  ppu.hpp  rolling_average.hpp
stress/: NEStress.NES  NEStress.asm  m
